// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Header should render with Finder 1`] = `
<header
  class=""
>
  <div
    class="container"
  >
    <h1>
      ADDRESS BOOK
    </h1>
    <input
      autocomplete="nope"
      class=""
      placeholder="Start typing to filter by user..."
    />
  </div>
  <div />
</header>
`;

exports[`Component: Header should render without Finder 1`] = `
<header
  class="basic"
>
  <div
    class="container"
  >
    <h1>
      ADDRESS BOOK
    </h1>
  </div>
  <div />
</header>
`;
